--- a/gallery.css
+++ b/gallery.css
@@ -83,6 +83,6 @@ footer {
     height: 50px;
     padding-top: 28px;
     background-color: black;
-    color: white;
+    color: rgb(103, 94, 94);
     text-align: center;
 }
